assets/moc-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: moc
  namespace: moc
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "moc.cquinta.com" 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moc
  namespace: moc
spec:
  hosts:
  - "moc.moc.svc.cluster.local"
  - "moc.cquinta.com"
  gateways:
  - moc
  http:
  - route:
    - destination:
        host: moc
        port:
          number: 8000
    retries:
      attempts: 3
      perTryTimeout: 500ms
      retryOn: 5xx
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: moc
  namespace: moc
spec:
  host: moc.moc.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
      http:
        http1MaxPendingRequests: 600
        maxRequestsPerConnection: 100
    outlierDetection:
      consecutive5xxErrors: 1000
      interval: 600ms
      baseEjectionTime: 60s
      maxEjectionPercent: 50
